--- a/cranes.html
+++ b/cranes.html
@@ -182,3 +182,13 @@
 
 </body>
 </html>
+ <style>
+    /* 워터마크(파일명 맞춰서 사용) */
+    .wm {
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      background: url("assets/watermark_hope.png") center/480px no-repeat;
+      opacity: 0.06;
+      z-index: 0;
+    }
