--- a/cranes.html
+++ b/cranes.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HCMS | 소형크레인 리스트</title
-                           <style>
+  <title>HCMS | 소형크레인 리스트</title>
+  <link rel="stylesheet" href="assets/hcms.css">
+  <style>
   /* ✅ 워터마크가 안 보일 때 강제 적용 패치 */
   body{ position: relative; }
 
@@ -29,7 +30,6 @@
   }
 </style>
 
-  <link rel="stylesheet" href="assets/hcms.css">
 </head>
 
 <body>
