--- a/holds.html
+++ b/holds.html
@@ -52,6 +52,14 @@
   <main class="container">
 
     <!-- 필터 -->
+    <div class="btn-row" style="margin:12px 0; gap:10px; display:flex; flex-wrap:wrap;">
+  <button class="btn" onclick="printFiltered()">필터결과 프린트</button>
+  <button class="btn" onclick="printSelected()">선택 프린트</button>
+
+  <button class="btn ghost" onclick="selectAllRows(true)">전체 선택</button>
+  <button class="btn ghost" onclick="selectAllRows(false)">선택 해제</button>
+</div>
+
     <section class="card no-print">
       <h2>필터</h2>
       <div class="btn-row" style="gap:12px; align-items:center;">
@@ -288,5 +296,177 @@
       loadHolds();
     });
   </script>
+  <script>
+/* =========================
+   holds.html 전용 프린트 패치
+   - 기존 로직/표 생성 방식 몰라도 동작(표 DOM 기반)
+   - 필터 결과 전체 프린트 / 체크된 행만 프린트
+========================= */
+
+function _getHoldTable() {
+  // 1순위: id가 있으면 그걸 쓰고, 없으면 페이지 첫 table
+  return document.getElementById("holdTable") || document.querySelector("table");
+}
+
+function _getTbody() {
+  const table = _getHoldTable();
+  return table ? table.querySelector("tbody") : null;
+}
+
+function ensurePrintCheckboxes() {
+  const table = _getHoldTable();
+  const tbody = _getTbody();
+  if (!table || !tbody) return;
+
+  // THEAD 없으면 생성
+  let thead = table.querySelector("thead");
+  if (!thead) {
+    thead = document.createElement("thead");
+    table.insertBefore(thead, table.firstChild);
+    const tr = document.createElement("tr");
+    // tbody 첫 행 기준으로 헤더 칸 수 맞춤(없으면 1칸)
+    const colCount = (tbody.querySelector("tr")?.children?.length || 1);
+    for (let i = 0; i < colCount; i++) {
+      const th = document.createElement("th");
+      th.textContent = "";
+      tr.appendChild(th);
+    }
+    thead.appendChild(tr);
+  }
+
+  // 헤더 첫칸에 전체체크박스가 없으면 삽입
+  const headRow = thead.querySelector("tr");
+  if (headRow) {
+    const firstTH = headRow.children[0];
+    if (!firstTH || !firstTH.querySelector("input#printChkAll")) {
+      // 첫칸에 "선택" 헤더 + 전체 체크
+      if (firstTH) {
+        firstTH.innerHTML = `<input id="printChkAll" type="checkbox" onchange="selectAllRows(this.checked)" />`;
+      } else {
+        const th = document.createElement("th");
+        th.innerHTML = `<input id="printChkAll" type="checkbox" onchange="selectAllRows(this.checked)" />`;
+        headRow.insertBefore(th, headRow.firstChild);
+      }
+    }
+  }
+
+  // 각 row 첫칸에 체크박스 없으면 prepend
+  [...tbody.querySelectorAll("tr")].forEach(tr => {
+    const firstTD = tr.children[0];
+    if (!firstTD) return;
+
+    // 이미 체크칸이면 스킵
+    if (firstTD.querySelector && firstTD.querySelector("input.rowChk")) return;
+
+    const td = document.createElement("td");
+    td.style.width = "60px";
+    td.innerHTML = `<input type="checkbox" class="rowChk" />`;
+
+    tr.insertBefore(td, tr.firstChild);
+  });
+}
+
+function selectAllRows(checked) {
+  const tbody = _getTbody();
+  if (!tbody) return;
+  tbody.querySelectorAll("input.rowChk").forEach(chk => chk.checked = !!checked);
+
+  const all = document.getElementById("printChkAll");
+  if (all) all.checked = !!checked;
+}
+
+function _buildPrintHTML(title, tableHTML) {
+  const now = new Date();
+  const stamp = `${now.getFullYear()}-${String(now.getMonth()+1).padStart(2,"0")}-${String(now.getDate()).padStart(2,"0")} ${String(now.getHours()).padStart(2,"0")}:${String(now.getMinutes()).padStart(2,"0")}`;
+
+  return `
+<!doctype html>
+<html lang="ko">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>${title}</title>
+<style>
+  body{ font-family: Arial, sans-serif; margin: 24px; color:#111; }
+  .hdr{ display:flex; justify-content:space-between; align-items:flex-end; margin-bottom:14px; }
+  .hdr .t{ font-size:20px; font-weight:900; }
+  .hdr .d{ font-size:12px; color:#666; font-weight:700; }
+  table{ width:100%; border-collapse:collapse; font-size:12px; }
+  th,td{ border:1px solid #ddd; padding:8px; text-align:center; }
+  th{ background:#f2f2f2; font-weight:900; }
+  /* 체크박스 칸 숨김 */
+  th:first-child, td:first-child{ display:none; }
+</style>
+</head>
+<body>
+  <div class="hdr">
+    <div class="t">${title}</div>
+    <div class="d">${stamp}</div>
+  </div>
+  ${tableHTML}
+</body>
+</html>`;
+}
+
+function printFiltered() {
+  ensurePrintCheckboxes();
+
+  const table = _getHoldTable();
+  if (!table) return alert("표(table)를 찾지 못했습니다.");
+
+  // 현재 화면에 보이는 그대로 프린트
+  const title = "HCMS 보류/미완 리스트 (필터결과)";
+  const html = _buildPrintHTML(title, table.outerHTML);
+
+  const w = window.open("", "_blank");
+  w.document.open();
+  w.document.write(html);
+  w.document.close();
+  w.focus();
+  w.print();
+}
+
+function printSelected() {
+  ensurePrintCheckboxes();
+
+  const table = _getHoldTable();
+  const tbody = _getTbody();
+  if (!table || !tbody) return alert("표(table)를 찾지 못했습니다.");
+
+  const selectedRows = [...tbody.querySelectorAll("tr")].filter(tr => tr.querySelector("input.rowChk")?.checked);
+  if (selectedRows.length === 0) return alert("선택된 항목이 없습니다.");
+
+  // 헤더/바디 재구성
+  const cloneTable = table.cloneNode(false);
+  const thead = table.querySelector("thead")?.cloneNode(true);
+  const newTbody = document.createElement("tbody");
+  selectedRows.forEach(tr => newTbody.appendChild(tr.cloneNode(true)));
+
+  if (thead) cloneTable.appendChild(thead);
+  cloneTable.appendChild(newTbody);
+
+  const title = `HCMS 보류/미완 리스트 (선택 ${selectedRows.length}건)`;
+  const html = _buildPrintHTML(title, cloneTable.outerHTML);
+
+  const w = window.open("", "_blank");
+  w.document.open();
+  w.document.write(html);
+  w.document.close();
+  w.focus();
+  w.print();
+}
+
+// ✅ rows가 새로 렌더링돼도 체크박스 자동 삽입
+document.addEventListener("DOMContentLoaded", () => {
+  ensurePrintCheckboxes();
+
+  const tbody = _getTbody();
+  if (!tbody) return;
+
+  const obs = new MutationObserver(() => ensurePrintCheckboxes());
+  obs.observe(tbody, { childList: true, subtree: true });
+});
+</script>
+
 </body>
 </html>
