--- a/tower_cranes.html
+++ b/tower_cranes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <link rel="icon" href="favicon.ico?v=2" sizes="any">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HCMS | 타워크레인 리스트</title>
